<resources>
    <string name="app_name">IoT Control</string>

    <string name="title_section1">Sensors</string>
    <string name="title_section2">Hubs</string>
    <string name="title_section3">Built-ins</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_camera">Scan QR code</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="qr_scan_button">Scan QR</string>
    <string name="action_account">Account</string>
    <string name="txt_username_label">Username</string>
    <string name="txt_password_label">Password</string>
    <string name="action_exit">Exit</string>
    <string name="sign_in_label">Sign In</string>
    <string name="action_pop">pop</string>
    <string name="action_pause">Pause</string>
    <string name="action_continue">Realtime</string>
    <string name="action_history">History</string>
    <string name="register_label">Register</string>
    <string name="show_chart_label">Show chart</string>
    <string name="share_label">Share</string>
    <string name="unregister_label">Unregister</string>
</resources>
