<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        app:showAsAction="withText|ifRoom" />
    <!--<item android:id="@+id/action_account" android:title="@string/action_account"
        app:showAsAction="withText|ifRoom" />-->
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_pop" android:title="@string/action_pop"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
